--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "node-sass": "4.14.1",
     "react-icons": "^4.1.0"
   },
   "devDependencies": {
